# pomotodo

./: README.md  setup.cfg
src/pomotodo/: app.py  countdown_timer.py  pomotodo.css  todo_form.py  todo_list_repository.py  todo_list_use_case.py  todo_sidebar.py  tui.py
src/pomotodo/app/: app.py  pomodoro_timer.py  pomotodo.css  todo_list.py
src/pomotodo/app/widgets/: pomodoro_message.py  pomodoro_timer.py  todo_input.py  todo_item.py  todo_list.py
src/pomotodo/pomodoro/: model.py
src/pomotodo/todo_list/: model.py  repository.py  services.py  todo_list_repository.py  todo_list_services.py  todo_model.py  todo_serialiser.py  unit_of_work.py
tests/: test_todo_list_repository.py  test_todo_list_use_case.py  test_todo_model.py  test_todo_serialiser.py
tests/pomodoro/: test_pomodoro_model.py
tests/todo_list/: test_todo_list_repository.py  test_todo_list_services.py  test_todo_list_use_case.py  test_todo_model.py  test_todo_serialiser.py
