[metadata]
name = pomotodo
version = attr: pomotodo.__version__
author = TomJGooding
description = A simple Pomodoro TUI with a timer and todo list
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TomJGooding/pomotodo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
python_requires = >=3.10
package_dir =
    = src
packages = find:
install_requires =
    textual >= 0.20.1

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pytest
    pytest-cov
    textual[dev]
